--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "league-of-legends-rankify",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "license": "MIT",
   "dependencies": {
     
   }
