--- a/package.json
+++ b/package.json
@@ -2,7 +2,5 @@
   "name": "league-of-legends-rankify",
   "version": "1.3.0",
   "license": "MIT",
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
